--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                     <span>FANTASY</span>
                 </div>
                 <p class="description">
-                    Di dunia di mana pemburu harus melawan monster mematikan, Sung Jin-Woo, pemburu terlemah di dunia, menemukan sistem rahasia yang memungkinkan dia untuk naik level tanpa batas.
+                    HAHAHA
                 </p>
                 <div class="cta-group">
                     <button class="btn-watch">▶ WATCH NOW</button>
