--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
             <div class="image-container">
                 <div class="glow-effect"></div>
-                <img src="https://images6.alphacoders.com/134/1341018.png" alt="Solo Leveling Character" class="main-img">
+                <img src="SJW.png" alt="Solo Leveling Character" class="main-img">
             </div>
         </div>
 
