--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
             <div class="image-container">
                 <div class="glow-effect"></div>
-                <img src="SJW.png" alt="Solo Leveling Character" class="main-img">
+                <img src="SJW.File" alt="Solo Leveling Character" class="main-img">
             </div>
         </div>
 
