--- a/index.html
+++ b/index.html
@@ -60,6 +60,24 @@
             <span class="dot"></span>
             <span class="dot"></span>
         </div>
+        <button id="joinBtn" class="btn-primary">JOIN NOW</button>
+
+<div id="joinModal" class="modal-overlay">
+    <div class="modal-content">
+        <span class="close-btn">&times;</span>
+        <h2 class="form-title">INITIALIZE_MEMBERSHIP</h2>
+        <p class="form-subtitle">Masukkan data Anda ke dalam sistem Nexus.</p>
+        <form id="registrationForm">
+            <div class="input-group">
+                <input type="text" placeholder="USER_ID" required>
+            </div>
+            <div class="input-group">
+                <input type="email" placeholder="EMAIL_ADDRESS" required>
+            </div>
+            <button type="submit" class="btn-submit">CONFIRM_LINK</button>
+        </form>
+    </div>
+</div>
     </main>
 
     <script src="script.js"></script>
