--- a/index.html
+++ b/index.html
@@ -31,14 +31,14 @@
         <div class="content-wrapper">
             <div class="anime-info">
                 <span class="season-tag">SEASON 1 | 2026</span>
-                <h1 class="glitch" data-text="SOLO LEVELING">SOLO LEVELING</h1>
+                <h1 class="glitch" data-text="WELCOME TO MY PAGE">WELCOME TO MY PAGE</h1>
                 <div class="rating">
                     ⭐⭐⭐⭐⭐ <span>(4.9)</span>
                 </div>
                 <div class="tags">
-                    <span>ACTION</span>
-                    <span>ADVENTURE</span>
-                    <span>FANTASY</span>
+                    <span>SONG</span>
+                    <span>LIST ANIME</span>
+                    <span>QNA</span>
                 </div>
                 <p class="description">
                     HAHAHA
@@ -51,7 +51,7 @@
 
             <div class="image-container">
                 <div class="glow-effect"></div>
-                <img src="SJW.File" alt="Solo Leveling Character" class="main-img">
+                <img src="SJW.File" alt="WAIT A MINUTE" class="main-File">
             </div>
         </div>
 
