--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
             <div class="image-container">
                 <div class="glow-effect"></div>
-                <img src="SJW.File" alt="WAIT A MINUTE" class="main-File">
+                <img src="https://pin.it/7waICzKDR" alt="WAIT A MINUTE" class="main-File">
             </div>
         </div>
 
