--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nexus Anime | Modern Tech Landing</title>
+    <title>Nndlefina's page | Modern Tech Landing</title>
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&family=Rajdhani:wght@300;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
@@ -13,11 +13,11 @@
 
     <header>
         <nav class="navbar">
-            <div class="logo">NEXUS<span>_XP</span></div>
+            <div class="logo">Nnd<span>_LEFINA</span></div>
             <ul class="nav-links">
-                <li><a href="#">Genre</a></li>
-                <li><a href="#">Trending</a></li>
-                <li><a href="#">Character</a></li>
+                <li><a href="#">IG</a></li>
+                <li><a href="#">YOUTUBE</a></li>
+                <li><a href="#">TIKTOK</a></li>
                 <li><a href="#">Update</a></li>
             </ul>
             <div class="nav-actions">
@@ -30,7 +30,7 @@
     <main class="hero-section">
         <div class="content-wrapper">
             <div class="anime-info">
-                <span class="season-tag">SEASON 1 | 2026</span>
+                <span class="season-tag">FIRST PAGE | 2026</span>
                 <h1 class="glitch" data-text="WELCOME TO MY PAGE">WELCOME TO MY PAGE</h1>
                 <div class="rating">
                     ⭐⭐⭐⭐⭐ <span>(4.9)</span>
@@ -41,17 +41,17 @@
                     <span>QNA</span>
                 </div>
                 <p class="description">
-                    HAHAHA
+                    HAHAHA, ENJOY GUYS
                 </p>
                 <div class="cta-group">
-                    <button class="btn-watch">▶ WATCH NOW</button>
+                    <button class="btn-watch">▶DM NOW</button>
                     <button class="btn-outline">✚ SAVE FOR LATER</button>
                 </div>
             </div>
 
             <div class="image-container">
                 <div class="glow-effect"></div>
-                <img src="https://pin.it/7waICzKDR" alt="WAIT A MINUTE" class="main-img">
+                <img src="RIO.jpg" alt="WAIT A MINUTE" class="main-img">
             </div>
         </div>
 
