--- a/index.html
+++ b/index.html
@@ -76,6 +76,9 @@
             </div>
             <button type="submit" class="btn-submit">CONFIRM_LINK</button>
         </form>
+        <button id="dmBtn" class="btn-dm">
+    <span class="icon">✉</span> DM NOW
+</button>
     </div>
 </div>
     </main>
